create new features: update and get mira
